Fix #54: use a fixed table layout with word break wrapping

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -18,6 +18,11 @@ form
 .hidden
     display: none
 
+table.volunteers-table
+    table-layout: fixed
+    td
+        word-wrap: break-word
+
 .volunteer_name
     font-size: 18px
 
